--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -2,8 +2,8 @@ setw -g mouse on
 setw -g mode-keys vi
 setw -g monitor-activity on
 
-bind-key v split-window -h
-bind-key s split-window -v
+bind-key v split-window -v
+bind-key x split-window -h
 
 # Vim style pane selection
 bind h select-pane -L
