--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,9 +1,14 @@
 setw -g mouse on
 setw -g mode-keys vi
 setw -g monitor-activity on
+set-window-option -g mode-keys vi
 
-bind-key v split-window -v
-bind-key x split-window -h
+bind-key -T copy-mode-vi 'v' send -X begin-selection
+bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel "xclip -in -selection clipboard"
+
+
+bind-key x split-window -v
+bind-key v split-window -h
 
 # Vim style pane selection
 bind h select-pane -L
