--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -7,8 +7,8 @@ bind-key -T copy-mode-vi 'v' send -X begin-selection
 bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel "xclip -in -selection clipboard"
 
 
-bind-key x split-window -v
-bind-key v split-window -h
+bind-key x split-window -v -c "#{pane_current_path}"
+bind-key v split-window -h -c "#{pane_current_path}"
 
 # Vim style pane selection
 bind h select-pane -L
