--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -25,3 +25,10 @@ bind L resize-pane -R 30
 
 # Reload tmux config
 bind r source-file ~/.tmux.conf
+
+# Statusbar
+set-option -g status-position bottom
+set-option -g status-left ""
+set-window-option -g window-status-style fg="#585858"
+set-window-option -g window-status-current-style fg="#303030",bg="#808080"
+set-option -g status-right "#[fg=#585858] Session: #S "
