--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,6 +1,7 @@
 setw -g mouse on
 setw -g mode-keys vi
 setw -g monitor-activity on
+set -g default-terminal "screen-256color"
 set-window-option -g mode-keys vi
 # No delay for escape key press
 set -sg escape-time 0
@@ -27,8 +28,8 @@ bind L resize-pane -R 30
 bind r source-file ~/.tmux.conf
 
 # Statusbar
-set-option -g status-position bottom
-set-option -g status-left ""
-set-window-option -g window-status-style fg="#585858"
-set-window-option -g window-status-current-style fg="#303030",bg="#808080"
-set-option -g status-right "#[fg=#585858] Session: #S "
+set-option -g status-right ""
+set -g status-bg black
+set -g status-fg "#585858"
+set-window-option -g window-status-current-style fg="#aeaeae"
+
