--- a/zsh/config
+++ b/zsh/config
@@ -5,11 +5,11 @@ export ZSH="$HOME/.oh-my-zsh"
 source $(brew --prefix nvm)/nvm.sh
 export NVM_DIR=~/.nvm
 
-ZSH_THEME="refined"
+ZSH_THEME="avit"
 # SET ESCAPE TIMEOUT
 KEYTIMEOUT=1
 
-plugins=(git)
+plugins=(git yarn npm)
 
 source $ZSH/oh-my-zsh.sh
 
@@ -22,4 +22,5 @@ alias tf="terraform"
 alias soundreset="sudo kill `ps -ax | grep 'coreaudiod' | grep 'sbin' |awk '{print $1}'`"
 alias python="python3"
 alias dotfiles="vim ~/dotfiles"
+
 
