--- a/alacritty/alacritty_linux.yml
+++ b/alacritty/alacritty_linux.yml
@@ -23,5 +23,5 @@ live_config_reload: true
 key_bindings:
   - { key: F12, mods: Control, action: IncreaseFontSize }
   - { key: F11, mods: Control, action: DecreaseFontSize }
-  - { key: Key0, mods: Control, action: ResetFontSize }
-  - { key: N, mods: Control, action: SpawnNewInstance }
+  - { key: F10, mods: Control, action: ResetFontSize }
+  - { key: N, mods: Shift|Alt, action: SpawnNewInstance }
