--- a/i3/i3status.conf
+++ b/i3/i3status.conf
@@ -6,18 +6,8 @@
 # ß
 # If the above line is not correctly displayed, fix your editor first!
 
-general {
-        colors = true
-        interval = 5
-}
-
-order += "disk /"
 order += "tztime local"
 
 tztime local {
-        format = "%Y-%m-%d %H:%M:%S"
-}
-
-disk "/" {
-        format = "%avail"
+        format = "%Y-%m-%d %H:%M"
 }
