--- a/zsh/config
+++ b/zsh/config
@@ -1,16 +1,11 @@
 export PATH=$HOME/bin:/usr/local/bin:$HOME/.composer/vendor/bin:$PATH
 export ZSH="$HOME/.oh-my-zsh"
 
-# nvm 
-source $(brew --prefix nvm)/nvm.sh
-export NVM_DIR=~/.nvm
-
 ZSH_THEME="avit"
 # SET ESCAPE TIMEOUT
 KEYTIMEOUT=1
 
-plugins=(git yarn npm zsh-autosuggestions)
-
+plugins=(git yarn npm)
 source $ZSH/oh-my-zsh.sh
 
 # Aliases
