--- a/zsh/config
+++ b/zsh/config
@@ -1,4 +1,5 @@
-export PATH=$HOME/bin:/usr/local/bin:$HOME/.composer/vendor/bin:$PATH
+export GOPATH="$HOME/dev/go"
+export PATH=$HOME/bin:/usr/local/bin:$HOME/.composer/vendor/bin:$PATH:$(go env GOPATH)/bin
 export ZSH="$HOME/.oh-my-zsh"
 
 ZSH_THEME="avit"
